# test

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.claude/commands/: build-ocr-service.md
app/: main.py
app/api/: dependencies.py  middleware.py  route_factory.py
app/api/routes/: extract.py
app/core/: config.py  logging.py  ocr_engine.py
app/models/: __init__.py  classify.py  common.py  envelope.py  extract.py  id_document.py  payment.py  request.py
app/postprocessors/: base.py  document_classify.py  id_document.py  payment_extraction.py  registry.py
app/services/: cost_estimator.py  llm_service.py
tests/: conftest.py  test_classify.py  test_extract.py  test_framework.py  test_hardening.py  test_id_document.py  test_payment.py
