[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iaia-ocr-service"
version = "0.1.0"
description = "Centralized OCR-as-a-Service platform for Air Bank"
requires-python = ">=3.12"

dependencies = [
    # Web framework and ASGI server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Pydantic v2 for models and validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Azure AI Document Intelligence SDK
    "azure-ai-documentintelligence>=1.0.0",

    # Azure Identity for credential-free auth (managed identity / service principal)
    "azure-identity>=1.17.0",

    # Azure OpenAI (via openai SDK with Azure configuration)
    "openai>=1.35.0",

    # Structured JSON logging
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    # Test runner
    "pytest>=8.2.0",
    # Async test support
    "pytest-asyncio>=0.23.0",
    # HTTP client for FastAPI test client
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
